addRunner api működik, submit form nem.

--- a/src/main/resources/templates/runners.html
+++ b/src/main/resources/templates/runners.html
@@ -28,7 +28,7 @@
     </table>
 
     <!-- Back Button -->
-    <a href="/index" class="btn btn-primary">Home</a>
+    <a href="http://localhost:8082" class="btn btn-primary">Return Home</a>
 </div>
 </body>
 </html>
