--- a/src/main/resources/templates/runners.html
+++ b/src/main/resources/templates/runners.html
@@ -15,6 +15,9 @@
             <th>Name</th>
             <th>Age</th>
             <th>Gender</th>
+            <th>Finish Time
+                (minutes)</th>
+
 
         </tr>
         </thead>
@@ -24,27 +27,39 @@
             <td th:text="${runner.runnerName}"></td>
             <td th:text="${runner.runnerAge}"></td>
             <td th:text="${runner.runnerGender}"></td>
+            <td th:text="${runner.finishTime}"></td>
+
 
         </tr>
+
         </tbody>
     </table>
 
+<div class="form-container">
+    <h1 class="add-new-runner">Add new runner</h1>
     <form action="/addRunner" method="post">
-        <label for="runnerName">Name:</label>
-        <input type="text" id="runnerName" name="name" required>
-        <br>
-        <label for="runnerAge">Age:</label>
-        <input type="number" id="runnerAge" name="age" required>
-        <br>
-        <label for="gender">Gender:</label>
-        <select id="gender" name="gender">
-            <option value="MALE">Male</option>
-            <option value="FEMALE">Female</option>
-            <option value="OTHER">Other</option>
-        </select>
-        <br>
+        <div class="label-container">
+            <label for="runnerName">Name:</label>
+            <input type="text" id="runnerName" name="name" required>
+            <label for="runnerAge">Age:</label>
+            <input type="number" id="runnerAge" name="age" required>
+            <!--        <br>-->
+            <!--        <label for="finishTime">Finish Time (minutes):</label>-->
+            <!--        <input type="number" id="finishTime" name="finishTime" required>-->
+            <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+                <option value="MALE">Male</option>
+                <option value="FEMALE">Female</option>
+                <option value="OTHER">Other</option>
+            </select>
+        </div>
+
         <button type="submit" class="btn btn-success">Submit</button>
-    <a href="http://localhost:8082" class="btn btn-primary">Return Home</a>
+        <a href="http://localhost:8082" class="btn btn-primary">Return Home</a>
+    </form>
+
+</div>
+
 </div>
 </body>
 </html>
@@ -70,9 +85,21 @@
         font-size: 24px;
     }
 
+    .add-new-runner{
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
     .btn{
         background: #230909;
         border: none;
         outline: none;
+    }
+
+    .label-container{
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 15px;
     }
 </style>
