--- a/src/main/resources/templates/races.html
+++ b/src/main/resources/templates/races.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Races</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
-    <h1>Races</h1>
-    <table class="table table-striped">
+
+<div class="nav-container">
+    <nav>
+        <a class="nav" href="http://localhost:8082">Home</a>
+        <a class="nav" href="http://localhost:8082/runners">Runners</a>
+        <a class="nav" href="http://localhost:8082/races">Races</a>
+    </nav>
+
+</div>
+
+<div class="races-container">
+
+    <h1 class="races">Races</h1>
+
+    <table class="races-table table-striped">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>Name</th>
+            <th>Race ID</th>
+            <th>Race Name</th>
             <th>Length(km)</th>
-            <th>Average Time</th>
+            <th>Average Finish Time (minutes)</th>
 
         </tr>
         </thead>
@@ -23,7 +36,7 @@
             <td th:text="${race.raceId}"></td>
             <td th:text="${race.raceName}"></td>
             <td th:text="${race.length}"></td>
-            <td th:text="${race.avgFinishTime != null ? race.avgFinishTime : 'N/A'}"></td>
+            <td th:text="${race.avrgTime.minute != 0 ? race.avrgTime.minute + 60 : race.avrgTime.minute}"></td>
 
 
             <script th:inline="javascript">
@@ -34,6 +47,9 @@
                     window.open(url, "_blank");
                 }
 
+
+
+
             </script>
 
             <td>
@@ -43,89 +59,23 @@
         </tbody>
     </table>
 
-    <form action="/newRace" method="post">
+    <form class="new-race-form" action="/newRace" method="post">
         <div class="form-group">
             <label for="raceName">Race name:</label>
-            <input type="text" class="form-control" id="raceName" name="name" placeholder="Enter race name">
-        <label for="raceLength">Race length:</label>
-            <input type="number" class="form-control" id="raceLength" name="length" placeholder="Enter race length">
+            <input type="text" class="form-control" id="raceName" name="name" placeholder="Enter race name" autocomplete="off" required pattern="[A-Za-z\s]+" minlength="6" maxlength="100">
+            <label for="raceLength">Race length:</label>
+            <input type="number" class="form-control" id="raceLength" name="length" placeholder="Enter race length" autocomplete="off" required min="1" max="100">
         </div>
+
         <button id="new-race-btn" type="submit" class="btn btn-success">New Race</button>
         <a id="home-btn" href="http://localhost:8082" class="btn btn-primary">Return Home</a>
 
     </form>
 
 </div>
+
+<script src="script.js" defer></script>
+
 </body>
 </html>
 
-
-<style>
-    body {
-        margin:0;
-        color: white;
-        min-height: 100vh;
-        display: flex;
-        align-content: center;
-        background: linear-gradient(to bottom, #ff4343, #ff8e50);
-    }
-
-    table{
-        background-color: rgba(52, 0, 0, 0.2);
-        border-radius: 5px;
-        border-collapse: separate;
-        border-spacing: 0;
-    }
-
-    .container{
-        width: 80%;
-        max-width: 700px;
-        margin: 10px;
-        justify-content: center;
-        align-content: center;
-    }
-    h1 {
-        color: #230909;
-        font-size: 24px;
-    }
-
-    thead th {
-        border-bottom: 2px solid #380000; /* Style the bottom border of table head cells */
-    }
-
-    tbody tr:first-child {
-        border-top: 2px solid #380000; /* Style the top border of the first row in the table body */
-    }
-
-
-    tbody tr {
-        border-bottom: 2px solid #380000;
-        border-top: 2px solid #380000;
-    }
-
-    #home-btn{
-        margin-top: 10px;
-        cursor: pointer;
-    }
-
-    #home-btn:hover{
-        background-color: white;
-        color: black;
-    }
-
-    #new-race-btn{
-        margin-top: 10px;
-        cursor: pointer;
-    }
-
-    .btn:hover{
-        background-color: white;
-        color: black;
-    }
-
-    .btn{
-        background: #230909;
-        border: none;
-        outline: none;
-    }
-</style>
