--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -9,11 +9,12 @@ body {
     align-content: center;
     align-items: center;
     background: linear-gradient(to top, #c8fffb, #50fff9);
+    position: relative;
 }
 
 img{
     margin-outside: 10px;
-    margin-top: 50px;
+    margin-top: 70px;
     border-radius: 10px;
     box-shadow: 0 3px 5px rgb(1, 28, 37, .5);
     width: 500px;
@@ -48,6 +49,7 @@ img{
 }
 
 .nav-container{
+    opacity: 1;
     position: fixed;
     top: 0;
     left: 0;
@@ -56,13 +58,28 @@ img{
     padding: 10px 0;
     background-color: #011c25;
     text-align: center;
+    transition: opacity .3s ease-in-out;
+}
+
+.nav-container.sticky {
+    opacity: 0.8;
+    transition: opacity 0.3s ease-in-out;
 }
 
 .nav-container nav{
     padding: 10px 20px;
 }
 
+.nav-container .fa-person-running{
+    position: absolute;
+    width: 20px;
+    height: auto;
+    left: 20px;
+    color: aliceblue;
+}
+
 .nav-container nav a{
+    outline: none;
     margin: 0 20px;
     color: aliceblue;
     font-weight: bold;
@@ -73,6 +90,27 @@ img{
 .nav-container nav a:hover{
     color: #729fa5;
 }
+
+.footer{
+    margin-top: 70px;
+    padding: 0;
+}
+
+.footer p{
+    color: rgba(1, 28, 37, 0.8);
+}
+
+.footer p a{
+    color: rgba(1, 28, 37, 0.8);
+    text-decoration: none;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+
+.footer p a:hover{
+    color: #b60016;
+}
+
 
 /* Index */
 
@@ -175,7 +213,13 @@ tbody td {
 /* Race details */
 
 .race-details{
+    margin-top: 50px;
+    text-align: center;
     margin-bottom: 50px;
+}
+
+#race-details-container{
+    margin-top: 50px;
 }
 
 .register-new-runner{
@@ -188,6 +232,15 @@ tbody td {
     font-size: 26px;
     margin-top: 40px;
 }
+
+.add-runner-form{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+/* Forms */
 
 .label-container{
     width: 350px;
@@ -210,11 +263,7 @@ form{
     flex-direction: column;
 }
 
-.add-runner-form{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
+
 
 .form-group label{
     margin-top: 20px;
@@ -231,6 +280,7 @@ form{
 }
 
 input{
+    outline: none;
     width: 300px;
     padding: 10px;
     border: none;
@@ -280,10 +330,6 @@ select::placeholder{
 @media screen and (max-width: 550px) {
     img{
         width: 400px;
-    }
-
-    .runners-table{
-        margin-left: 0;
     }
 
     .form-container{
