--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Race Tracker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
 <div class="nav-container">
     <nav>
+        <i class="fa-solid fa-person-running"></i>
         <a class="nav" href="http://localhost:8082">Home</a>
         <a class="nav" href="http://localhost:8082/runners">Runners</a>
         <a class="nav" href="http://localhost:8082/races">Races</a>
@@ -38,6 +40,11 @@
 
 
 </div>
+
+<footer class="footer">
+    <p>Made with Springboot by VMware Tanzu | <a href="https://spring.io">https://spring.io</a> </p>
+</footer>
+
 
 <script src="script.js"></script>
 
